k8s-on-premise-cloud/OPA-GateKeeper/ingress-rule/DomainRequiredIngress-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain-required-ingress
  namespace: movie-web
spec:
  rules:
    - host: movie-web.nhatanhdevops.website
      http:
        paths:
          - path: /  
            pathType: Prefix  
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
