k8s-on-premise-cloud/OPA-GateKeeper/ingress-rule/DomainRequiredIngress-Contraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDomainRequiredIngress
metadata:
  name: ingress-requirements
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io", "extensions"]
        kinds: ["Ingress"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["movie-web", "test"]
  parameters:
    domains:
      - ".nhatanhweb.website"
      - ".nhatanhmovie.website"
  validationFailureAction: enforce
